<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutNewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/LinearLayoutNewItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_elevation"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinearLayoutBlynkDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BlynkDeviceAuthToken"
                android:textColor="@color/colorAccent2" />

            <TextView
                android:id="@+id/TextViewAppAuthToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/BlynkDeviceName"
                android:textAlignment="center"
                android:textColor="@color/colorAccent2"
                android:visibility="visible" />

        </LinearLayout>

        <View
            android:id="@+id/DividerItem"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="0"
            android:background="@color/cyan_500" />

        <LinearLayout
            android:id="@+id/LinearLayoutTools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImageViewEditItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:scaleType="fitCenter"
                app:tint="@color/tangerine_yellow"
                app:srcCompat="@mipmap/ic_edit" />

            <ImageView
                android:id="@+id/ImageViewDeleteItem"
                android:layout_width="33dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:scaleType="fitCenter"
                app:tint="@color/tangerine_yellow"
                app:srcCompat="@mipmap/ic_delete" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>